Day-5 with Operators and Control Flow

--- a/Datamites_Classes/Classes.ipynb
+++ b/Datamites_Classes/Classes.ipynb
@@ -2146,6 +2146,486 @@
     "y=[(1,123),(88,23452)]\n",
     "dict(y) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfb3532c",
+   "metadata": {},
+   "source": [
+    "# Day-5\n",
+    "- Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8de2c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "8\n",
+      "48\n",
+      "3.0\n",
+      "3\n",
+      "0\n",
+      "20736\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmatic Operators (+,-,*,/,//,%,**)\n",
+    "\n",
+    "\n",
+    "a,b = 12,4\n",
+    "\n",
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n",
+    "print(a/b)    #division\n",
+    "print(a//b)   #floor division\n",
+    "print(a%b)    #reminder\n",
+    "print(a**b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "084debf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Assignment Operator (=,+=,-=,*=,/=,//=,%=,**=)\n",
+    "\n",
+    "a=2\n",
+    "a+=2\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fd837a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Comparative Operators (==,!=,>,<,<=,>=)\n",
+    "\n",
+    "a=33\n",
+    "b=42\n",
+    "\n",
+    "print(a==b)\n",
+    "print(a!=b)\n",
+    "print(a>b)\n",
+    "print(a<b)\n",
+    "print(a<=b)\n",
+    "print(a>=b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e5978767",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#   (is,is not)\n",
+    "\n",
+    "a=250\n",
+    "b=250\n",
+    "\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c7bfebcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=257\n",
+    "b=257\n",
+    "\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ccc19587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=(1,2,3)\n",
+    "b=(1,2,3)\n",
+    "\n",
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c13c7c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e37ffc2",
+   "metadata": {},
+   "source": [
+    "### Reasons\n",
+    "- The variabes stores at different location and here (with is) it will try to compare between the variable\n",
+    "- while == will compare the values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f9e17c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Membership Operators (in, not in)\n",
+    "\n",
+    "a=[1,2,3]\n",
+    "4 in a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ba12ee3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 not in a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5dce46bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logical Operators (and,or)\n",
+    "\n",
+    "print(True and True)\n",
+    "print(False and False)\n",
+    "print(False and True)\n",
+    "print(True and False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "de649c21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True or True)\n",
+    "print(False or False)\n",
+    "print(False or True)\n",
+    "print(True or False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "aa6d5f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not (True and False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d5d92db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bitwise Operators (&[and],|[or],^[Xor],~[not],<<[left shift],>>[right shift])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d05311",
+   "metadata": {},
+   "source": [
+    "## Control Flow Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c887201f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=0\n",
+    "\n",
+    "if a<0:\n",
+    "    print('a is negative')\n",
+    "elif a==0:\n",
+    "    print('a is zero')\n",
+    "else:\n",
+    "    print('a is positive')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "eb792561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is small\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c=1,10,8\n",
+    "\n",
+    "if a<b and a<c:\n",
+    "    print('a is small')\n",
+    "elif b<a and b<c:\n",
+    "    print('b is small')\n",
+    "else:\n",
+    "    print('c is small')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c5a8e258",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not a leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 2003\n",
+    "\n",
+    "if (year%4 ==0 and year%4 !=100) or (year%400 ==0):\n",
+    "    print('Its a leap year')\n",
+    "else:\n",
+    "    print('not a leap year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc8fc38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#not using or\n",
+    "\n",
+    "year = 2003\n",
+    "\n",
+    "if (year%400 ==0):\n",
+    "    print('Its a leap year')\n",
+    "elif (year%4 ==0 and year%4 !=100):\n",
+    "    print('Its a leap year')\n",
+    "else:\n",
+    "    print('not a leap year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "fdaa3903",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Its not a leap year with 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#not using or,and\n",
+    "\n",
+    "year = 1400\n",
+    "\n",
+    "if (year%400 ==0):\n",
+    "    print('Its a leap year')\n",
+    "elif (year%4 ==0):\n",
+    "    if (year%100 != 0):\n",
+    "        print('Its a leap year with 100')\n",
+    "    else:\n",
+    "        print('Its not a leap year with 100')\n",
+    "else:\n",
+    "    print('not a leap year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "133da575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=int(input())\n",
+    "\n",
+    "if (a%2 ==0):\n",
+    "    print('divide by 2')\n",
+    "elif (a%2 !=0):\n",
+    "    print('not divide by 2')"
+   ]
   }
  ],
  "metadata": {
