Day-6 with while and for loop

--- a/Datamites_Classes/Classes.ipynb
+++ b/Datamites_Classes/Classes.ipynb
@@ -2626,6 +2626,424 @@
     "elif (a%2 !=0):\n",
     "    print('not divide by 2')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38dce824",
+   "metadata": {},
+   "source": [
+    "# Day-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fe64968f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "while a>=1:\n",
+    "    a-=1\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd5b5daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loops like for & while are used to run code nth times\n",
+    "\n",
+    "a=0\n",
+    "while a<10:\n",
+    "    print(10)\n",
+    "    a+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0dbeaccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "num =0\n",
+    "\n",
+    "while num<50:\n",
+    "    num+=2\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e65291e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,"
+     ]
+    }
+   ],
+   "source": [
+    "num =0\n",
+    "\n",
+    "while num<50:\n",
+    "    num+=2\n",
+    "    print(num,end=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "86796566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,"
+     ]
+    }
+   ],
+   "source": [
+    "num =1\n",
+    "\n",
+    "while num<=70:\n",
+    "    if num%2==0:\n",
+    "        print(num,end=',')\n",
+    "    num+=1\n",
+    "    if num==50:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bdd181af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Game\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "x= random.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c818393b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "not correct ans\n",
+      "enter your answer\n",
+      "correct answer\n"
+     ]
+    }
+   ],
+   "source": [
+    "chance=5\n",
+    "while None!=0:\n",
+    "    a=int(input(print('enter your answer')))\n",
+    "    if a==x:\n",
+    "        print(\"correct answer\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print('not correct ans')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32d42704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b754d68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n",
+      "55\n",
+      "60\n",
+      "65\n",
+      "70\n",
+      "75\n",
+      "80\n",
+      "85\n",
+      "90\n",
+      "95\n"
+     ]
+    }
+   ],
+   "source": [
+    "for var in range(0,100,5):\n",
+    "    print(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8c7c36ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "x='abcd'\n",
+    "\n",
+    "for a in x:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ffbccd90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b:98\n",
+      "a:97\n",
+      "n:110\n",
+      "g:103\n",
+      "a:97\n",
+      "l:108\n",
+      "o:111\n",
+      "r:114\n",
+      "e:101\n",
+      "['b', 'a', 'n', 'g', 'a', 'l', 'o', 'r', 'e']\n",
+      "[98, 97, 110, 103, 97, 108, 111, 114, 101]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"bangalore\"\n",
+    "name=[]\n",
+    "list=[]\n",
+    "\n",
+    "for i in a:\n",
+    "    print(f'{i}:{ord(i)}')\n",
+    "    name.append(i)\n",
+    "    list.append(ord(i))\n",
+    "\n",
+    "print(name)\n",
+    "print(list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0be1f16a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5x1=5\n",
+      "5x2=10\n",
+      "5x3=15\n",
+      "5x4=20\n",
+      "5x5=25\n",
+      "5x6=30\n",
+      "5x7=35\n",
+      "5x8=40\n",
+      "5x9=45\n",
+      "5x10=50\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10):\n",
+    "    print(f'5x{i+1}={5*(i+1)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "aaa4563c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum=0\n",
+    "\n",
+    "for i in range(1,6):\n",
+    "    sum+=i\n",
+    "    \n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346ba0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print sum of n numbers with (for , while)\n",
+    "# factorial of number 3 3!=1*2*3"
+   ]
   }
  ],
  "metadata": {
